Fix build script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel": "babel src/ --out-dir dist --watch --verbose",
     "snowpack:dev": "snowpack --dest dist/web_modules --clean",
     "snowpack:prod": "yarn run snowpack:dev --optimize",
-    "build": "babel src/ --out-dir dist && snowpack:prod"
+    "build": "babel src/ --out-dir dist && yarn run snowpack:prod"
   },
   "dependencies": {
     "vue": "^2.6.11"
