--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "yarn run babel & yarn run serve",
     "serve": "servor dist index.html 8080 --reload",
-    "babel": "babel src/ --out-dir dist --watch --verbose",
+    "cp:index": "cp index.html dist/index.html",
+    "babel:dev": "babel src/ --out-dir dist --watch --verbose",
+    "babel:prod": "babel src/ --out-dir dist",
     "snowpack:dev": "snowpack --dest dist/web_modules --clean",
     "snowpack:prod": "yarn run snowpack:dev --optimize",
-    "build": "babel src/ --out-dir dist && yarn run snowpack:prod"
+    "build": "yarn run babel:prod && yarn run cp:index && yarn run snowpack:prod"
   },
   "dependencies": {
     "vue": "^2.6.11"
